--------------------------- Changelog -----------------------------
4.1.2
Meteor Swarms
Adjusted - Tutorial will now spawn as roider union fleet if mod is enabled
Fixed - Hardened the ship picker for ice meteors against null ship hulls that would crash

Museum
Adjusted - can no longer delete profile while fleet is active
Fixed - no longer crashes when random parade naturally despawns

4.1.a

General
Added - You can now halve the remaining upgrade time of a building by spending relic components.
Note - Doesn't work for the initial construction of a building due to a vanilla bug. Will probably be fixed with the next game version.
Adjusted - Brought the IndEvo industry button text format in line with vanilla (if it throws up a popup, it ends on "...", else, not.)
Fixed - Planet Story "Plague" - no longer mentions the use of antibiotics against a virus

Items
Adjusted - "Threat" relic component drop rate reduced by another 50%
Fixed - AOE missiles now display the on-target AOE reticule like they should

Hullmods
Fixed - Camouflage Emitter no longer marks non-unique ships as unique on removal (thanks, J2Greene)

Exploration
Added - Meteor showers (1 common, 3 rare variations)
Added - Meteor shower tutorial encounter
Fixed - "Hostile Intel" salvage event: Sending the intel to the enemy no longer increases your rep with both factions
Fixed - Minefields no longer crash if you interdict to disable them while one explodes (0.1s window, congrats to ScriptSprite)

Research Projects
Adjusted - Project Sonic - Reduced fuel cost from 20.000 to 5000, removed option to throw in a synchrotron

Courier Port
Added - "Ship all weapons" setting
Added - All cost settings are now editable in the mod settings
Adjusted - Shipping cargo from one local storage to another on one planet is now instant and no longer spawns a fleet
Fixed - Pick specific cargo display no longer has a bunch of bugged out text all over (how was this never reported?!)