@@ -3,4 +3,5 @@ package indevo.industries.warehouses.data;
 public class WarehouseConstants {
 
     public static final int MAX_ADDITIONAL_SUBMARKETS = 5;
+    public static final int DAYS_UNTIL_ITEM_ACTIVE = 60;
 }
